@@ -36,6 +36,7 @@ showrawfile.button.tooltip=Show the unprocessed file
 showdir.button.text=Show directory
 showdir.button.tooltip=Show contents of directory {0}
 showrevinfo.link.tooltip=Show\\u00a0revision\\u00a0details
+logmessage.empty=No log message entered
 filter.text=Filter extensions
 filter.button.text=Apply
 listfiles.link.tooltip=Show\\u00a0/\\u00a0hide\\u00a0directory\\u00a0contents
